--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,9 @@ build_unflags =
 build_flags = 
     -std=gnu++17
     -DCORE_DEBUG_LEVEL=5
+    -DDEBUG_USB_HOST
+    -DDEBUG_ALL
+    -DDEBUG_ESP_PORT=Serial
     -I include
     -I src
     -I .pio/libdeps/esp32dev/NimBLE-Arduino/src
@@ -18,10 +21,18 @@ build_flags =
 lib_deps =
     https://github.com/T-vK/ESP32-BLE-Keyboard
     https://github.com/T-vK/ESP32-BLE-Mouse
-    tobozo/ESP32-USB-Soft-Host
+    tobozo/ESP32-USB-Soft-Host @ ^0.1.3
     h2zero/NimBLE-Arduino @ ^1.4.1
 
 lib_ldf_mode = deep
 build_src_filter = +<*> -<.git/> -<.svn/>
 
-monitor_filters = esp32_exception_decoder 
+monitor_filters = 
+    esp32_exception_decoder
+    default
+    time
+    colorize
+
+upload_speed = 921600
+monitor_rts = 0
+monitor_dtr = 0
