- read me update

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,34 +4,20 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 
-build_unflags = 
-    -std=gnu++11
-
 build_flags = 
     -std=gnu++17
-    -DCORE_DEBUG_LEVEL=5
-    -DDEBUG_USB_HOST
-    -DDEBUG_ALL
-    -DDEBUG_ESP_PORT=Serial
     -I include
     -I src
     -I .pio/libdeps/esp32dev/NimBLE-Arduino/src
-    -I ${platformio.packages_dir}/framework-arduinoespressif32/tools/sdk/esp32/include
 
 lib_deps =
     https://github.com/T-vK/ESP32-BLE-Keyboard
     https://github.com/T-vK/ESP32-BLE-Mouse
-    tobozo/ESP32-USB-Soft-Host @ ^0.1.3
+    tobozo/ESP32-USB-Soft-Host @ ^0.1.4
     h2zero/NimBLE-Arduino @ ^1.4.1
 
 lib_ldf_mode = deep
-build_src_filter = +<*> -<.git/> -<.svn/>
-
-monitor_filters = 
-    esp32_exception_decoder
-    default
-    time
-    colorize
+monitor_filters = esp32_exception_decoder
 
 upload_speed = 921600
 monitor_rts = 0
