--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,9 @@ build_flags =
     -I include
     -I src
     -I .pio/libdeps/esp32dev/NimBLE-Arduino/src
+    -DCORE_DEBUG_LEVEL=0
+    -DARDUINO_USB_MODE=0
+    -DARDUINO_USB_CDC_ON_BOOT=0
 
 lib_deps =
     https://github.com/T-vK/ESP32-BLE-Keyboard
